--- a/css/plants.css
+++ b/css/plants.css
@@ -80,7 +80,7 @@ body {
 .plantImg {
     height: 70%;
     border: none;
-    border-radius: 10px;
+    border-radius: 10px 10px 0 0;
     margin: 2.5%;
     text-align: center;
     background:  #004000;
@@ -100,7 +100,7 @@ body {
 .plantTxT {
     height: 20%;
     border: none;
-    border-radius: 10px;
+    border-radius: 0 0 10px 10px;
     margin: 2.5%;
     display: flex;
     flex-direction: column;
