--- a/css/columns.css
+++ b/css/columns.css
@@ -27,6 +27,20 @@
     width: 80%;
 }
 
+/* 25/75 unequal column */
+
+.unequalcolumn {
+    float: left;
+}
+
+.xxvcolumnleft {
+    width: 25%;
+}
+
+.lxxvcolumnright {
+    width: 75%;
+}
+
 .row{
     margin: 0;
 }
