--- a/css/home.css
+++ b/css/home.css
@@ -4,16 +4,21 @@
 
 body {
     /* background-color: #0077ff; */
-    background: url("../img/protosample/bg/bg0.jpg");
+    background: url("../img/protosample/bg/bgHome.gif");
     /* "Spirit of Sadness" is under a Non-Commercial License of StockVault.net */
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    /* background-attachment: fixed; */
+    background-attachment: fixed; 
     /* width: 100%; */
 }
 
 /* Content area */
+
+.intro h1{
+    font-size: 9vh;
+    font-style: italic;
+}
 
 .details {
     height: 40vh;
@@ -25,6 +30,27 @@ body {
     flex-direction: column;
     justify-content: center;
     text-align: center;
+}
+
+.detailsButton{
+    background-color: transparent;
+    color: #000;
+    text-decoration: none;
+    border: solid;
+    border-radius: 20%;
+    border-color: transparent;
+    padding: 5%;
+
+    display: inline-block;
+    transition: 0.3s;
+}
+
+.detailsButton:hover{
+    color: rgb(40, 161, 40);
+    border: 5px solid;
+    border-radius: 20%;
+    padding: 5%;
+    border-color: black;
 }
 
 .details img {
@@ -45,6 +71,14 @@ body {
     text-align: center;
 }
 
+.progress h1 {
+    margin: 1vw 2vw;
+    font-style: italic;
+    font-weight: 450;
+}
+
 .progress img {
     border-radius: 10%;
+    width: 10vw;
+    margin: 2vw;
 }
