--- a/css/footer.css
+++ b/css/footer.css
@@ -1,8 +1,8 @@
 footer {
-    height: 50vh;
+    height: auto;
     overflow: hidden;
     color: #fff;
-    padding: 100px;
+    padding: 50px 100px;
     background: rgb(0, 0, 0);
     text-align: left !important;
     display: flex;
@@ -34,4 +34,9 @@ footer a:active {
 
 .footerColumnDivider {
     border-right: 2pt solid white;
+}
+
+#footerLogo {
+    width: 120px;
+    margin-left: 0;
 }
