--- a/css/home.css
+++ b/css/home.css
@@ -15,12 +15,19 @@ body {
 /* Content area */
 
 .intro h1{
-    font-size: 9vh;
+    font-size: 11vh;
     font-style: italic;
+    transition: 1s;
+}
+
+.intro h1:hover{
+    transform: scale(1.2);
+    transition: 1s;
+    cursor: default;
 }
 
 .details {
-    height: 40vh;
+    height: 35vh;
     width: 100%;
     overflow: hidden;
     padding: 50px 100px;
@@ -49,7 +56,9 @@ body {
     border: 5px solid;
     border-radius: 20%;
     padding: 5%;
-    border-color: black;
+    border-color: rgb(40, 161, 40);
+    transform: scale(1.1);
+    transition: 0.3s;
 }
 
 .details img {
