--- a/css/plants.css
+++ b/css/plants.css
@@ -22,7 +22,7 @@ body {
 
 .intro h1:hover{
     transform: scale(1.2);
-    transition: 1s;
+    transition: 0.3s;
     cursor: default;
 }
 
@@ -104,6 +104,7 @@ body {
     height: 100px;
     border: solid;
     border-radius: 100%;
+    transition: 0.3s;
 }
 
 .plantImg img:hover {
@@ -134,6 +135,7 @@ body {
     width: auto;
     height: 47%;
     margin: 1%;
+    padding: 2%;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -159,6 +161,7 @@ body {
     border: solid;
     border-color: transparent;
     border-radius: 10px;
+    transition: 0.3s;
 }
 
 .plantInfoBox:hover {
