--- a/css/nav.css
+++ b/css/nav.css
@@ -34,10 +34,6 @@
 .navbtn:hover {
     border: solid;
     border-color: white;
-    border-bottom-left-radius: 50%;
-    border-top-right-radius: 50%;
-    border-top-left-radius: 0%;
-    border-bottom-right-radius: 0%;
 }
 
 .navbtn:active {
@@ -110,7 +106,7 @@
 }
 .showbtn:hover {
     background: rgba(255, 255, 255, 0.5);
-    cursor: crosshair;
+    cursor: pointer;
 }
 
 .obscure:hover {
